# asi

./: .gitignore  AGENTS.md  ASI_UPDATES_DRAFT.md  ASI_V2.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.md  llms.txt
.plan/: active.yaml
cli/: pyproject.toml
cli/src/asi/: cli.py
cli/src/asi/commands/: creator.py
cli/src/asi/creator/: loop.py  questions.py  schemas.py  state.py
docs/: CHANGELOG.md  FAQ.md  GLOSSARY.md  MUTATION_CHECKLIST.md  SKILLS.md  changelog.md  faq.md  glossary.md  manifesto.md
netflix-ui/: package-lock.json  package.json
presentation/: .gitignore  01_Title_and_Goals.md  02_Why_Skills_Exist_The_Expectation_Gap.md  03_What_Is_a_Skill.md  04_What_Skills_Do_Not_Do.md  05_Skills_vs_MCP_Servers.md  06_Skill_Repo_Structure_At_a_Glance.md  07_SKILL_md_The_Manifest.md  08_References_Where_the_Real_Instructions_Live.md  09_Assets_and_Scripts_Determinism_Toolbelt.md  10_Boundaries_Natural_Language_Judgment_Determinism.md  11_Risks_Misinterpretations_Failure_Modes.md  12_Mini_Demo_Walkthrough_Using_examples_aux_grep.md  13_What_Should_Be_a_Skill_Litmus_Tests.md  14_ASI_Plugins_and_Next_Steps.md  README.md  assemble.sh  build.sh  package-lock.json  package.json
references/: .INDEX.md  01_SUMMARY.md  03_NON_GOALS.md  04_PASSIVE_CONTRACT.md  05_DETERMINISM_ORDERING.md  07_FAILURE_SEMANTICS.md  08_CONFORMANCE_CHECKLIST.md  09_ANTI_PATTERNS.md  10_EXAMPLES_GUIDE.md
scripts/: README.md  check_structure.sh  lint_markdown.sh  lint_shell_portability.sh
skills/: README.md  install.ps1  install.sh
(+415 files in other folders)
